@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -48,6 +49,7 @@ namespace IECorePython
 void bindParticleWriter()
 {
 	RunTimeTypedClass<ParticleWriter>()
+		.def( "canWrite", &ParticleWriter::canWrite ).staticmethod( "canWrite" )
 	;
 }
 
