@@ -3,6 +3,7 @@ Improvements :
 * IECore.loadConfig() now ignores files starting with ~. This avoids errors caused by certain popular text editors saving backup files next to the config file during editing.
 * The IECore.loadConfig() localsDict argument has been renamed to contextDict, and is now used as both the locals and globals for the execution of the config files. This works around python's annoying scoping whereby any modules would have to be imported within functions defined in the config files rather than
 at the file scope.
+* Added python bindings for the various Writer canWrite() methods.
 
 Bug Fixes :
 
